[add] 添加集群token验证并接入接口
