# apiserver/controllers/cluster/cluster.go
@@ -6,5 +6,7 @@
 package cluster
 
 type CreateRequest struct {
-	Name string `json:"name"`
+	Name     string `json:"name"`
+	APIHost  string `json:"api_host" gorm:"column:api_host"`
+	APIToken string `json:"api_token" gorm:"column:api_token"`
 }
